--- a/src/pages/collections.html
+++ b/src/pages/collections.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Collections</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../styles/main.css">
 </head>
 <body>
     <div class="container">
@@ -25,41 +25,40 @@
             <section id="collections">
                 <a href="sydney_collection.html">
                     <button>
-                        <img src="photos/syd_24'/DSCF4607.JPG" alt="Sydney 2024">
+                        <img src="../assets/images/sydney/DSCF4607.JPG" alt="Sydney 2024">
                         <div class="overlay">Sydney 2024</div>
                     </button>
                 </a>
                 <a href="china_trip_2.html">
                     <button>
-                        <img src="photos/china_trip_2/DSCF4174.JPG" alt="China trip 2">
+                        <img src="../assets/images/china-trip-2/DSCF4174.JPG" alt="China trip 2">
                         <div class="overlay">China trip 2</div>
                     </button>
                 </a>
                 <a href="fitzroy_collection.html">
                     <button>
-                        <img src="photos/fitzroy/DSCF3610.JPG" alt="Fitzroy 2024">
+                        <img src="../assets/images/fitzroy/DSCF3610.JPG" alt="Fitzroy 2024">
                         <div class="overlay">Fitzroy</div>
                     </button>
                 </a>
                 <a href="china_trip_1.html">
                     <button>
-                        <img src="photos/china_trip_1/DSCF3324.JPG" alt="China trip 1">
+                        <img src="../assets/images/china-trip-1/DSCF3324.JPG" alt="China trip 1">
                         <div class="overlay">China trip 1</div>
                     </button>
                 </a>
                 <a href="raglan_collection.html">
                     <button>
-                        <img src="photos/raglan/DSCF3039.JPG" alt="Raglan 2023">
+                        <img src="../assets/images/raglan/DSCF3039.JPG" alt="Raglan 2023">
                         <div class="overlay">Raglan 2023</div>
                     </button>
                 </a>
                 <a href="archive_collection.html">
                     <button>
-                        <img src="photos/old_film/34010031.JPG" alt="Archives">
+                        <img src="../assets/images/archive/34010031.JPG" alt="Archives">
                         <div class="overlay">Archives</div>
                     </button>
                 </a>
-                
             </section>
         </main>
     </div>
