--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home page</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../styles/main.css">
 </head>
 <body> 
     <div class="container">
@@ -23,7 +23,7 @@
             </div>
         </nav>
         <div class="photo">
-            <img src="photos/old_film/34010031.JPG" alt="Background Photo">
+            <img src="../assets/images/archive/34010031.JPG" alt="Background Photo">
         </div>
     </div>
 </body>
