--- a/src/pages/china_trip_1.html
+++ b/src/pages/china_trip_1.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fitzroy Collection</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>China trip 1</title>
+    <link rel="stylesheet" href="../styles/main.css">
 </head>
 <body>
     <div class="container">
@@ -23,14 +23,14 @@
         </nav>
         <main>
             <div class="photo">
-                <img src="photos/fitzroy/DSCF3610.JPG" alt="Photo 1" style="margin-top:30px;">
-                <img src="photos/fitzroy/DSCF3604.JPG" alt="Photo 2">
-                <img src="photos/fitzroy/DSCF3596.JPG" alt="Photo 3">
-                <img src="photos/fitzroy/DSCF3573.JPG" alt="Photo 4">
-                <img src="photos/fitzroy/DSCF3566.JPG" alt="Photo 5">
-                <img src="photos/fitzroy/DSCF3559.JPG" alt="Photo 6">
-                <img src="photos/fitzroy/DSCF3649.JPG" alt="Photo 7">
-                <img src="photos/fitzroy/DSCF3661.JPG" alt="Photo 8">
+                <img src="../assets/images/china-trip-1/DSCF3324.JPG" alt="Photo 1" style="margin-top:30px;">
+                <img src="../assets/images/china-trip-1/DSCF3315.JPG" alt="Photo 2">
+                <img src="../assets/images/china-trip-1/DSCF3326.JPG" alt="Photo 3">
+                <img src="../assets/images/china-trip-1/DSCF3328.JPG" alt="Photo 4">
+                <img src="../assets/images/china-trip-1/DSCF3331.JPG" alt="Photo 5">
+                <img src="../assets/images/china-trip-1/DSCF3356.JPG" alt="Photo 6">
+                <img src="../assets/images/china-trip-1/DSCF3205.JPG" alt="Photo 7">
+                <img src="../assets/images/china-trip-1/DSCF3215.JPG" alt="Photo 8">
             </div>
         </main>
     </div>
