--- a/src/pages/collections.html
+++ b/src/pages/collections.html
@@ -26,32 +26,32 @@
             <section id="collections">
                 <a href="collections/sydney_collection.html">
                     <button>
-                        <img src="../assets/photos/syd_24'/DSCF4607.JPG" alt="Sydney 2024">
+                        <img src="/src/assets/photos/syd_24'/DSCF4607.JPG" alt="Sydney 2024">
                     </button>
                 </a>
                 <a href="collections/china_trip_2.html">
                     <button>
-                        <img src="../assets/photos/china_trip_2/DSCF4174.JPG" alt="China trip 2">
+                        <img src="/src/assets/photos/china_trip_2/DSCF4174.JPG" alt="China trip 2">
                     </button>
                 </a>
                 <a href="collections/fitzroy_collection.html">
                     <button>
-                        <img src="../assets/photos/fitzroy/DSCF3610.JPG" alt="Fitzroy 2024">
+                        <img src="/src/assets/photos/fitzroy/DSCF3610.JPG" alt="Fitzroy 2024">
                     </button>
                 </a>
                 <a href="collections/china_trip_1.html">
                     <button>
-                        <img src="../assets/photos/china_trip_1/DSCF3324.JPG" alt="China trip 1">
+                        <img src="/src/assets/photos/china_trip_1/DSCF3324.JPG" alt="China trip 1">
                     </button>
                 </a>
                 <a href="collections/raglan_collection.html">
                     <button>
-                        <img src="../assets/photos/raglan/DSCF3039.JPG" alt="Raglan 2023">
+                        <img src="/src/assets/photos/raglan/DSCF3039.JPG" alt="Raglan 2023">
                     </button>
                 </a>
                 <a href="collections/archive_collection.html">
                     <button>
-                        <img src="../assets/photos/old_film/34010031.JPG" alt="Archives">
+                        <img src="/src/assets/photos/old_film/34010031.JPG" alt="Archives">
                     </button>
                 </a>
             </section>
