--- a/src/pages/collections/china_trip_1.html
+++ b/src/pages/collections/china_trip_1.html
@@ -14,24 +14,24 @@
             </h1>
             <div class="nav-links">
                 <ul>
-                    <li><a href="../collections.html">COLLECTIONS</a></li>
-                    <li><a href="../about.html">ABOUT</a></li>
-                    <li><a href="../contact.html">CONTACT</a></li>
-                    <li><a href="../other.html">OTHER</a></li>
+                    <li><a href="../../pages/collections.html">COLLECTIONS</a></li>
+                    <li><a href="../../pages/about.html">ABOUT</a></li>
+                    <li><a href="../../pages/contact.html">CONTACT</a></li>
+                    <li><a href="../../pages/other.html">OTHER</a></li>
                 </ul>
             </div>
         </nav>
         <main>
             <div class="photo">
                 <h1 class="collection-title">BEIJING, CHINA</h1>
-                <img src="../../assets/photos/china_trip_1/DSCF3324.JPG" alt="Photo 1">
-                <img src="../../assets/photos/china_trip_1/DSCF3315.JPG" alt="Photo 2">
-                <img src="../../assets/photos/china_trip_1/DSCF3326.JPG" alt="Photo 3">
-                <img src="../../assets/photos/china_trip_1/DSCF3328.JPG" alt="Photo 4">
-                <img src="../../assets/photos/china_trip_1/DSCF3331.JPG" alt="Photo 5">
-                <img src="../../assets/photos/china_trip_1/DSCF3356.JPG" alt="Photo 6">
-                <img src="../../assets/photos/china_trip_1/DSCF3205.JPG" alt="Photo 7">
-                <img src="../../assets/photos/china_trip_1/DSCF3215.JPG" alt="Photo 8">
+                <img src="/src/assets/photos/china_trip_1/DSCF3324.JPG" alt="Photo 1">
+                <img src="/src/assets/photos/china_trip_1/DSCF3315.JPG" alt="Photo 2">
+                <img src="/src/assets/photos/china_trip_1/DSCF3326.JPG" alt="Photo 3">
+                <img src="/src/assets/photos/china_trip_1/DSCF3328.JPG" alt="Photo 4">
+                <img src="/src/assets/photos/china_trip_1/DSCF3331.JPG" alt="Photo 5">
+                <img src="/src/assets/photos/china_trip_1/DSCF3356.JPG" alt="Photo 6">
+                <img src="/src/assets/photos/china_trip_1/DSCF3205.JPG" alt="Photo 7">
+                <img src="/src/assets/photos/china_trip_1/DSCF3215.JPG" alt="Photo 8">
             </div>
         </main>
     </div>
