--- a/src/pages/collections/raglan_collection.html
+++ b/src/pages/collections/raglan_collection.html
@@ -14,10 +14,10 @@
             </h1>
             <div class="nav-links">
                 <ul>
-                    <li><a href="../collections.html">COLLECTIONS</a></li>
-                    <li><a href="../about.html">ABOUT</a></li>
-                    <li><a href="../contact.html">CONTACT</a></li>
-                    <li><a href="../other.html">OTHER</a></li>
+                    <li><a href="../../pages/collections.html">COLLECTIONS</a></li>
+                    <li><a href="../../pages/about.html">ABOUT</a></li>
+                    <li><a href="../../pages/contact.html">CONTACT</a></li>
+                    <li><a href="../../pages/other.html">OTHER</a></li>
                 </ul>
             </div>
         </nav>
