--- a/src/pages/collections/sydney_collection.html
+++ b/src/pages/collections/sydney_collection.html
@@ -14,28 +14,27 @@
             </h1>
             <div class="nav-links">
                 <ul>
-                    <li><a href="../collections.html">COLLECTIONS</a></li>
-                    <li><a href="../about.html">ABOUT</a></li>
-                    <li><a href="../contact.html">CONTACT</a></li>
-                    <li><a href="../other.html">OTHER</a></li>
+                    <li><a href="../../pages/collections.html">COLLECTIONS</a></li>
+                    <li><a href="../../pages/about.html">ABOUT</a></li>
+                    <li><a href="../../pages/contact.html">CONTACT</a></li>
+                    <li><a href="../../pages/other.html">OTHER</a></li>
                 </ul>
             </div>
         </nav>
         <main>
             <div class="photo">
                 <h1 class="collection-title">SYDNEY, AUSTRALIA</h1>
-                <img src="../../assets/photos/syd_24'/DSCF4607.JPG" alt="Photo 1">
-                <img src="../../assets/photos/syd_24'/DSCF4585.JPG" alt="Photo 2">
-                <img src="../../assets/photos/syd_24'/DSCF4591.JPG" alt="Photo 3">
-                <img src="../../assets/photos/syd_24'/DSCF4595.JPG" alt="Photo 4">
-                <img src="../../assets/photos/syd_24'/DSCF4598.JPG" alt="Photo 5">
-                <img src="../../assets/photos/syd_24'/DSCF4617.JPG" alt="Photo 6">
-                <img src="../../assets/photos/syd_24'/DSCF4621.JPG" alt="Photo 7">
-                <img src="../../assets/photos/syd_24'/DSCF4668.JPG" alt="Photo 8">
-                <img src="../../assets/photos/syd_24'/DSCF4669.JPG" alt="Photo 9">
-                <img src="../../assets/photos/syd_24'/DSCF4684.JPG" alt="Photo 10">
-                <img src="../../assets/photos/syd_24'/DSCF4685.JPG" alt="Photo 11">
-
+                <img src="/src/assets/photos/syd_24'/DSCF4607.JPG" alt="Photo 1">
+                <img src="/src/assets/photos/syd_24'/DSCF4585.JPG" alt="Photo 2">
+                <img src="/src/assets/photos/syd_24'/DSCF4591.JPG" alt="Photo 3">
+                <img src="/src/assets/photos/syd_24'/DSCF4595.JPG" alt="Photo 4">
+                <img src="/src/assets/photos/syd_24'/DSCF4598.JPG" alt="Photo 5">
+                <img src="/src/assets/photos/syd_24'/DSCF4617.JPG" alt="Photo 6">
+                <img src="/src/assets/photos/syd_24'/DSCF4621.JPG" alt="Photo 7">
+                <img src="/src/assets/photos/syd_24'/DSCF4668.JPG" alt="Photo 8">
+                <img src="/src/assets/photos/syd_24'/DSCF4669.JPG" alt="Photo 9">
+                <img src="/src/assets/photos/syd_24'/DSCF4684.JPG" alt="Photo 10">
+                <img src="/src/assets/photos/syd_24'/DSCF4685.JPG" alt="Photo 11">
             </div>
         </main>
     </div>
