--- a/src/pages/collections/archive_collection.html
+++ b/src/pages/collections/archive_collection.html
@@ -24,14 +24,14 @@
         <main>
             <div class="photo">
                 <h1 class="collection-title">ARCHIVES</h1>
-                <img src="../../assets/photos/old_film/34010031.JPG" alt="Photo 1">
-                <img src="../../assets/photos/old_film/34010030.JPG" alt="Photo 2">
-                <img src="../../assets/photos/old_film/34010018.JPG" alt="Photo 3">
-                <img src="../../assets/photos/old_film/34010026.JPG" alt="Photo 4">
-                <img src="../../assets/photos/old_film/000025.JPG" alt="Photo 5">
-                <img src="../../assets/photos/old_film/000026(1).JPG" alt="Photo 6">
-                <img src="../../assets/photos/old_film/000024.JPG" alt="Photo 7">
-                <img src="../../assets/photos/old_film/000022(1).JPG" alt="Photo 8">
+                <img src="/assets/photos/old_film/34010031.JPG" alt="Photo 1">
+                <img src="/assets/photos/old_film/34010030.JPG" alt="Photo 2">
+                <img src="/assets/photos/old_film/34010018.JPG" alt="Photo 3">
+                <img src="/assets/photos/old_film/34010026.JPG" alt="Photo 4">
+                <img src="/assets/photos/old_film/000025.JPG" alt="Photo 5">
+                <img src="/assets/photos/old_film/000026(1).JPG" alt="Photo 6">
+                <img src="/assets/photos/old_film/000024.JPG" alt="Photo 7">
+                <img src="/assets/photos/old_film/000022(1).JPG" alt="Photo 8">
             </div>
         </main>
     </div>
