--- a/src/pages/collections/china_trip_2.html
+++ b/src/pages/collections/china_trip_2.html
@@ -24,21 +24,20 @@
         <main>
             <div class="photo">
                 <h1 class="collection-title">CHONGQING, SHENZHEN, & HONGKONG</h1>
-                <img src="../../assets/photos/china_trip_2/DSCF4174.JPG" alt="Photo 1">
-                <img src="../../assets/photos/china_trip_2/DSCF4187.JPG" alt="Photo 2">
-                <img src="../../assets/photos/china_trip_2/DSCF4197.JPG" alt="Photo 3">
-                <img src="../../assets/photos/china_trip_2/DSCF3754.JPG" alt="Photo 4">
-                <img src="../../assets/photos/china_trip_2/DSCF3779.JPG" alt="Photo 5">
-                <img src="../../assets/photos/china_trip_2/DSCF3823.JPG" alt="Photo 6">
-                <img src="../../assets/photos/china_trip_2/DSCF3843.JPG" alt="Photo 7">
-                <img src="../../assets/photos/china_trip_2/DSCF3850.JPG" alt="Photo 8">
-                <img src="../../assets/photos/china_trip_2/DSCF3874.JPG" alt="Photo 9">
-                <img src="../../assets/photos/china_trip_2/DSCF3939.JPG" alt="Photo 10">
-                <img src="../../assets/photos/china_trip_2/DSCF3952.JPG" alt="Photo 11">
-                <img src="../../assets/photos/china_trip_2/DSCF3965.JPG" alt="Photo 12">
-                <img src="../../assets/photos/china_trip_2/DSCF4001.JPG" alt="Photo 13">
-                <img src="../../assets/photos/china_trip_2/DSCF4006.JPG" alt="Photo 14">
-
+                <img src="/assets/photos/china_trip_2/DSCF4174.JPG" alt="Photo 1">
+                <img src="/assets/photos/china_trip_2/DSCF4187.JPG" alt="Photo 2">
+                <img src="/assets/photos/china_trip_2/DSCF4197.JPG" alt="Photo 3">
+                <img src="/assets/photos/china_trip_2/DSCF3754.JPG" alt="Photo 4">
+                <img src="/assets/photos/china_trip_2/DSCF3779.JPG" alt="Photo 5">
+                <img src="/assets/photos/china_trip_2/DSCF3823.JPG" alt="Photo 6">
+                <img src="/assets/photos/china_trip_2/DSCF3843.JPG" alt="Photo 7">
+                <img src="/assets/photos/china_trip_2/DSCF3850.JPG" alt="Photo 8">
+                <img src="/assets/photos/china_trip_2/DSCF3874.JPG" alt="Photo 9">
+                <img src="/assets/photos/china_trip_2/DSCF3939.JPG" alt="Photo 10">
+                <img src="/assets/photos/china_trip_2/DSCF3952.JPG" alt="Photo 11">
+                <img src="/assets/photos/china_trip_2/DSCF3965.JPG" alt="Photo 12">
+                <img src="/assets/photos/china_trip_2/DSCF4001.JPG" alt="Photo 13">
+                <img src="/assets/photos/china_trip_2/DSCF4006.JPG" alt="Photo 14">
             </div>
         </main>
     </div>
