--- a/src/pages/collections/fitzroy_collection.html
+++ b/src/pages/collections/fitzroy_collection.html
@@ -24,14 +24,14 @@
         <main>
             <div class="photo">
                 <div class="collection-title">FITZROY, MELB</div>
-                <img src="../../assets/photos/fitzroy/DSCF3610.JPG" alt="Photo 1">
-                <img src="../../assets/photos/fitzroy/DSCF3604.JPG" alt="Photo 2">
-                <img src="../../assets/photos/fitzroy/DSCF3596.JPG" alt="Photo 3">
-                <img src="../../assets/photos/fitzroy/DSCF3573.JPG" alt="Photo 4">
-                <img src="../../assets/photos/fitzroy/DSCF3566.JPG" alt="Photo 5">
-                <img src="../../assets/photos/fitzroy/DSCF3559.JPG" alt="Photo 6">
-                <img src="../../assets/photos/fitzroy/DSCF3649.JPG" alt="Photo 7">
-                <img src="../../assets/photos/fitzroy/DSCF3661.JPG" alt="Photo 8">
+                <img src="/assets/photos/fitzroy/DSCF3610.JPG" alt="Photo 1">
+                <img src="/assets/photos/fitzroy/DSCF3604.JPG" alt="Photo 2">
+                <img src="/assets/photos/fitzroy/DSCF3596.JPG" alt="Photo 3">
+                <img src="/assets/photos/fitzroy/DSCF3573.JPG" alt="Photo 4">
+                <img src="/assets/photos/fitzroy/DSCF3566.JPG" alt="Photo 5">
+                <img src="/assets/photos/fitzroy/DSCF3559.JPG" alt="Photo 6">
+                <img src="/assets/photos/fitzroy/DSCF3649.JPG" alt="Photo 7">
+                <img src="/assets/photos/fitzroy/DSCF3661.JPG" alt="Photo 8">
             </div>
         </main>
     </div>
