--- a/src/pages/collections/raglan_collection.html
+++ b/src/pages/collections/raglan_collection.html
@@ -24,18 +24,17 @@
         <main>
             <div class="photo">
                 <h1 class="collection-title">RAGLAN, NZ</h1>
-                <img src="../../assets/photos/raglan/DSCF3039.JPG" alt="Photo 1">
-                <img src="../../assets/photos/raglan/DSCF3051.JPG" alt="Photo 2">
-                <img src="../../assets/photos/raglan/DSCF3061.JPG" alt="Photo 3">
-                <img src="../../assets/photos/raglan/DSCF3066.JPG" alt="Photo 4">
-                <img src="../../assets/photos/raglan/DSCF3081.JPG" alt="Photo 5">
-                <img src="../../assets/photos/raglan/DSCF3111.JPG" alt="Photo 6">
-                <img src="../../assets/photos/raglan/DSCF3119.JPG" alt="Photo 7">
-                <img src="../../assets/photos/raglan/DSCF3124.JPG" alt="Photo 8">
-                <img src="../../assets/photos/raglan/DSCF3128.JPG" alt="Photo 9">
-                <img src="../../assets/photos/raglan/DSCF3170.JPG" alt="Photo 10">
-                <img src="../../assets/photos/raglan/DSCF2974.JPG" alt="Photo 11">
-
+                <img src="/assets/photos/raglan/DSCF3039.JPG" alt="Photo 1">
+                <img src="/assets/photos/raglan/DSCF3051.JPG" alt="Photo 2">
+                <img src="/assets/photos/raglan/DSCF3061.JPG" alt="Photo 3">
+                <img src="/assets/photos/raglan/DSCF3066.JPG" alt="Photo 4">
+                <img src="/assets/photos/raglan/DSCF3081.JPG" alt="Photo 5">
+                <img src="/assets/photos/raglan/DSCF3111.JPG" alt="Photo 6">
+                <img src="/assets/photos/raglan/DSCF3119.JPG" alt="Photo 7">
+                <img src="/assets/photos/raglan/DSCF3124.JPG" alt="Photo 8">
+                <img src="/assets/photos/raglan/DSCF3128.JPG" alt="Photo 9">
+                <img src="/assets/photos/raglan/DSCF3170.JPG" alt="Photo 10">
+                <img src="/assets/photos/raglan/DSCF2974.JPG" alt="Photo 11">
             </div>
         </main>
     </div>
