--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About me</title>
     <link rel="stylesheet" href="../styles/main.css">
+    <script type="module" src="../main.ts"></script>
 </head>
 <body>
     <div class="container">
