updated collections to photography

--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -15,7 +15,7 @@
             </h1>
             <div class="nav-links">
                 <ul>
-                    <li><a href="collections.html">COLLECTIONS</a></li>
+                    <li><a href="photography.html">PHOTOGRAPHY</a></li>
                     <li><a href="about.html">ABOUT</a></li>
                     <li><a href="contact.html">CONTACT</a></li>
                     <li><a href="other.html">OTHER</a></li>
@@ -26,7 +26,8 @@
             <section id="about">
                 <p> Hi, my name is Steven. </p>
                 <p> I'm an undergrad student at the University of Melbourne, studying Computer and Software Systems. </p>
-                <p> I am passionate about coding and I'm currently exploring webdev with TypeScript.</p>
+                <p> I enjoy coding and I'm currently learning UI/UX design for fun!</p>
+                <p> Outside of coding and school work, I like to take photos and play basketball.</p>
             </section>
         </main>
     </div>
