--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -15,7 +15,7 @@
             </h1>
             <div class="nav-links">
                 <ul>
-                    <li><a href="collections.html">COLLECTIONS</a></li>
+                    <li><a href="photography.html">PHOTOGRAPHY</a></li>
                     <li><a href="about.html">ABOUT</a></li>
                     <li><a href="contact.html">CONTACT</a></li>
                     <li><a href="other.html">OTHER</a></li>
