--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
             <div class="nav-links">
                 <ul>
                     <!-- fill in links later-->
-                    <li><a href="pages/collections.html">COLLECTIONS</a></li>
+                    <li><a href="pages/photography.html">PHOTOGRAPHY</a></li>
                     <li><a href="pages/about.html">ABOUT</a></li>
                     <li><a href="pages/contact.html">CONTACT</a></li>
                     <li><a href="pages/other.html">OTHER</a></li>
