--- a/src/pages/collections/archive_collection.html
+++ b/src/pages/collections/archive_collection.html
@@ -14,7 +14,7 @@
             </h1>
             <div class="nav-links">
                 <ul>
-                    <li><a href="../../pages/collections.html">COLLECTIONS</a></li>
+                    <li><a href="../../pages/photography.html">PHOTOGRAPHY</a></li>
                     <li><a href="../../pages/about.html">ABOUT</a></li>
                     <li><a href="../../pages/contact.html">CONTACT</a></li>
                     <li><a href="../../pages/other.html">OTHER</a></li>
