--- a/src/pages/photography.html
+++ b/src/pages/photography.html
@@ -15,7 +15,7 @@
             </h1>
             <div class="nav-links">
                 <ul>
-                    <li><a href="collections.html">COLLECTIONS</a></li>
+                    <li><a href="photography.html">PHOTOGRAPHY</a></li>
                     <li><a href="about.html">ABOUT</a></li>
                     <li><a href="contact.html">CONTACT</a></li>
                     <li><a href="other.html">OTHER</a></li>
@@ -49,13 +49,3 @@
                         <img src="/assets/photos/raglan/DSCF3039.JPG" alt="Raglan 2023">
                     </button>
                 </a>
-                <a href="collections/archive_collection.html">
-                    <button>
-                        <img src="/assets/photos/old_film/34010031.JPG" alt="Archives">
-                    </button>
-                </a>
-            </section>
-        </main>
-    </div>
-</body>
-</html>
