--- a/src/index.html
+++ b/src/index.html
@@ -15,17 +15,15 @@
             </h1>
             <div class="nav-links">
                 <ul>
-                    <!-- fill in links later-->
-                    <li><a href="pages/photography.html">PHOTOGRAPHY</a></li>
                     <li><a href="pages/about.html">ABOUT</a></li>
                     <li><a href="pages/contact.html">CONTACT</a></li>
-                    <li><a href="pages/other.html">OTHER</a></li>
+                    <li><a href="pages/projects.html">PROJECTS</a></li>
+                    <li><a href="pages/photography.html">PHOTOGRAPHY</a></li>
                 </ul>
             </div>
         </nav>
         <main>
             <div id="photo-slideshow" class="slideshow">
-                <!-- Images will be inserted by TypeScript -->
             </div>
         </main>
     </div>
