--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -15,18 +15,18 @@
             </h1>
             <div class="nav-links">
                 <ul>
-                    <li><a href="photography.html">PHOTOGRAPHY</a></li>
                     <li><a href="about.html">ABOUT</a></li>
                     <li><a href="contact.html">CONTACT</a></li>
-                    <li><a href="other.html">OTHER</a></li>
+                    <li><a href="projects.html">PROJECTS</a></li>
+                    <li><a href="photography.html">PHOTOGRAPHY</a></li>
                 </ul>
             </div>
         </nav>
         <main>
             <section id="contact">
-                <p>EMAIL: <a href="mailto:6iubiu@gmail.com">ajlu0414@gmail.com</a></p>
-                <p>INSTAGRAM: <a href="https://www.instagram.com/6iubiu/">@6iubiu</a></p>
-                <p>LINKEDIN: <a href="linkedin.com/in/steven-lu-04b603300">Steven Lu</a></p>
+                <p><strong>Email:</strong> <a href="mailto:6iubiu@gmail.com">ajlu0414@gmail.com</a></p>
+                <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/steven-lu-04b603300/">Steven Lu</a></p>
+                <p><strong>Instagram:</strong> <a href="https://www.instagram.com/6iubiu/">@6iubiu</a></p>
             </section>
         </main>
     </div>
