--- a/src/pages/projects.html
+++ b/src/pages/projects.html
@@ -15,17 +15,17 @@
             </h1>
             <div class="nav-links">
                 <ul>
-                    <li><a href="photography.html">PHOTOGRAPHY</a></li>
                     <li><a href="about.html">ABOUT</a></li>
                     <li><a href="contact.html">CONTACT</a></li>
-                    <li><a href="other.html">OTHER</a></li>
+                    <li><a href="projects.html">PROJECTS</a></li>
+                    <li><a href="photography.html">PHOTOGRAPHY</a></li>
                 </ul>
             </div>
         </nav>
         <main>
             <section id="other">
                 <p>This section is for other content and projects.</p>
-                <p>Coming soon...</p>
+                <p>Will update soon...</p>
             </section>
         </main>
     </div>
