--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -15,19 +15,18 @@
             </h1>
             <div class="nav-links">
                 <ul>
-                    <li><a href="photography.html">PHOTOGRAPHY</a></li>
                     <li><a href="about.html">ABOUT</a></li>
                     <li><a href="contact.html">CONTACT</a></li>
-                    <li><a href="other.html">OTHER</a></li>
+                    <li><a href="projects.html">PROJECTS</a></li>
+                    <li><a href="photography.html">PHOTOGRAPHY</a></li>
                 </ul>
             </div>
         </nav>
         <main>
             <section id="about">
-                <p> Hi, my name is Steven. </p>
-                <p> I'm an undergrad student at the University of Melbourne, studying Computer and Software Systems. </p>
-                <p> I enjoy coding and I'm currently learning UI/UX design for fun!</p>
-                <p> Outside of coding and school work, I like to take photos and play basketball.</p>
+                <p> Hi, my name is <strong>Steven</strong>. </p>
+                <p> I'm an undergrad student at the <u>University of Melbourne</u>, studying <strong>Computing and Software Systems</strong>. </p>
+                <p> I enjoy coding and I'm currently learning UI/UX design for fun! Outside of coding and school work, I like to take photos and play basketball.</p>
             </section>
         </main>
     </div>
