--- a/src/pages/collections/china_trip_1.html
+++ b/src/pages/collections/china_trip_1.html
@@ -14,10 +14,10 @@
             </h1>
             <div class="nav-links">
                 <ul>
-                    <li><a href="../../pages/photography.html">PHOTOGRAPHY</a></li>
                     <li><a href="../../pages/about.html">ABOUT</a></li>
                     <li><a href="../../pages/contact.html">CONTACT</a></li>
-                    <li><a href="../../pages/other.html">OTHER</a></li>
+                    <li><a href="../../pages/projects.html">PROJECTS</a></li>
+                    <li><a href="../../pages/photography.html">PHOTOGRAPHY</a></li>
                 </ul>
             </div>
         </nav>
