--- a/src/pages/collections/fitzroy_collection.html
+++ b/src/pages/collections/fitzroy_collection.html
@@ -13,11 +13,11 @@
                 <a href="../../index.html">STEVEN LU</a>
             </h1>
             <div class="nav-links">
-                <ul>
-                    <li><a href="../photography.html">PHOTOGRAPHY</a></li>
+                <ul>                    
                     <li><a href="../about.html">ABOUT</a></li>
                     <li><a href="../contact.html">CONTACT</a></li>
-                    <li><a href="../other.html">OTHER</a></li>
+                    <li><a href="../projects.html">PROJECTS</a></li>
+                    <li><a href="../../pages/photography.html">PHOTOGRAPHY</a></li>
                 </ul>
             </div>
         </nav>
