--- a/src/pages/collections/sydney_collection.html
+++ b/src/pages/collections/sydney_collection.html
@@ -13,11 +13,11 @@
                 <a href="../../index.html">STEVEN LU</a>
             </h1>
             <div class="nav-links">
-                <ul>
-                    <li><a href="../../pages/photography.html">PHOTOGRAPHY</a></li>
+                <ul>    
                     <li><a href="../../pages/about.html">ABOUT</a></li>
                     <li><a href="../../pages/contact.html">CONTACT</a></li>
-                    <li><a href="../../pages/other.html">OTHER</a></li>
+                    <li><a href="../../pages/projects.html">PROJECTS</a></li>
+                    <li><a href="../../pages/photography.html">PHOTOGRAPHY</a></li>
                 </ul>
             </div>
         </nav>
