--- a/src/pages/photography.html
+++ b/src/pages/photography.html
@@ -15,10 +15,10 @@
             </h1>
             <div class="nav-links">
                 <ul>
-                    <li><a href="photography.html">PHOTOGRAPHY</a></li>
                     <li><a href="about.html">ABOUT</a></li>
                     <li><a href="contact.html">CONTACT</a></li>
-                    <li><a href="other.html">OTHER</a></li>
+                    <li><a href="projects.html">PROJECTS</a></li>
+                    <li><a href="photography.html">PHOTOGRAPHY</a></li>
                 </ul>
             </div>
         </nav>
