added more info in about

--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -23,10 +23,74 @@
             </div>
         </nav>
         <main>
-            <section id="about">
-                <p> Hi, my name is <strong>Steven</strong>. </p>
-                <p> I'm an undergrad student at the <u>University of Melbourne</u>, studying <strong>Computing and Software Systems</strong>. </p>
-                <p> I enjoy coding and I'm currently learning UI/UX design for fun! Outside of coding and school work, I like to take photos and play basketball.</p>
+            <section id="about-content">
+                <div class="about-section">
+                    <h2>About</h2>
+                    <p>Hi, my name is Steven.</p>
+                    <p>I'm an undergrad student at the University of Melbourne, studying <strong>Computing and Software Systems</strong>.</p>
+                    <p>I enjoy coding and I'm currently learning UI/UX design for fun!</p>
+                    <p>Outside of coding and school work, I like to take photos and play basketball.</p>
+                </div>
+
+                <div class="about-section">
+                    <h2>Education</h2>
+                    <div class="education-item">
+                        <p class="date">2024 — Present</p>
+                        <div class="education-info">
+                            <h3>University of Melbourne</h3>
+                            <p>BSc majoring in Computing and Software Systems</p>
+                            <p>Relevant courses: 
+                                <a href="https://handbook.unimelb.edu.au/2025/subjects/swen20003" class="section-link">Object Oriented Software Development<span class="arrow">↗</span></a>, 
+                                <a href="https://handbook.unimelb.edu.au/2025/subjects/info20003" class="section-link">Database Systems<span class="arrow">↗</span></a>,
+                                <a href="https://handbook.unimelb.edu.au/2025/subjects/comp10002" class="section-link">Foundations of Algorithms<span class="arrow">↗</span></a>,
+                                <a href="https://handbook.unimelb.edu.au/2025/subjects/mast10006" class="section-link">Calculus 2<span class="arrow">↗</span></a>,
+                                <a href="https://handbook.unimelb.edu.au/2025/subjects/mast10007" class="section-link">Linear Algebra<span class="arrow">↗</span></a>
+                            </p>
+                        </div>
+                    </div>
+                    <div class="education-item">
+                        <p class="date">2018 — 2023</p>
+                        <div class="education-info">
+                            <h3>Kristin School</h3>
+                            <p>Completed the IB Diploma</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="about-section">
+                    <h2>Experience</h2>
+                    <div class="education-item">
+                        <p class="date">2025 — Present</p>
+                        <div class="education-info">
+                            <h3>Lead Web Developer at HackMelbourne</h3>
+                            <p>Currently working on <a href="https://hack.melbourne" class="section-link">hack.melbourne<span class="arrow">↗</span></a></p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="about-section">
+                    <h2>Skills</h2>
+                    <div class="skills-grid">
+                        <div class="skill-category">
+                            <h3>Programming</h3>
+                            <p>Python, Java, C, MySQL</p>
+                        </div>
+                        <div class="skill-category">
+                            <h3>Tools</h3>
+                            <p>Git, Figma</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="about-section">
+                    <h2>Projects</h2>
+                    <p>Check out my <a href="projects.html" class="section-link">projects page<span class="arrow">↗</span></a> to see what I've been working on.</p>
+                </div>
+
+                <div class="about-section">
+                    <h2>Contact</h2>
+                    <p>Find my contact information on the <a href="contact.html" class="section-link">contact page<span class="arrow">↗</span></a>.</p>
+                </div>
             </section>
         </main>
     </div>
