--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -24,9 +24,10 @@
         </nav>
         <main>
             <section id="contact">
-                <p><strong>Email:</strong> <a href="mailto:6iubiu@gmail.com">ajlu0414@gmail.com</a></p>
-                <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/steven-lu-04b603300/">Steven Lu</a></p>
-                <p><strong>Instagram:</strong> <a href="https://www.instagram.com/6iubiu/">@6iubiu</a></p>
+                <p>Email: <a href="mailto:6iubiu@gmail.com">ajlu0414@gmail.com</a></p>
+                <p>LinkedIn: <a href="https://www.linkedin.com/in/steven-lu-04b603300/">Steven Lu</a></p>
+                <p>GitHub: <a href="https://github.com/biu6iu">biu6iu</a></p>
+                <p>Instagram: <a href="https://www.instagram.com/6iubiu/">@6iubiu</a></p>
             </section>
         </main>
     </div>
