--- a/src/pages/photography.html
+++ b/src/pages/photography.html
@@ -49,3 +49,8 @@
                         <img src="/assets/photos/raglan/DSCF3039.JPG" alt="Raglan 2023">
                     </button>
                 </a>
+                <a href="collections/archive_collection.html">
+                    <button>
+                        <img src="/assets/photos/old_film/000024.JPG" alt="Archive">
+                    </button>
+                </a>
