--- a/src/pages/projects.html
+++ b/src/pages/projects.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Other</title>
+    <title>Projects</title>
     <link rel="stylesheet" href="../styles/main.css">
     <script type="module" src="../main.ts"></script>
 </head>
@@ -23,7 +23,7 @@
             </div>
         </nav>
         <main>
-            <section id="other">
+            <section id="projects">
                 <p>This section is for other content and projects.</p>
                 <p>Will update soon...</p>
             </section>
