minor changes to about, contact, and project pages

--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -37,7 +37,7 @@
                     <div class="education-item">
                         <p class="date">2024 — Present</p>
                         <div class="education-info">
-                            <h3>University of Melbourne</h3>
+                            <h3>The University of Melbourne</h3>
                             <p>BSc majoring in Computing and Software Systems</p>
                             <p>Relevant courses: 
                                 <a href="https://handbook.unimelb.edu.au/2025/subjects/swen20003" class="section-link">Object Oriented Software Development<span class="arrow">↗</span></a>, 
@@ -77,7 +77,7 @@
                         </div>
                         <div class="skill-category">
                             <h3>Tools</h3>
-                            <p>Git, Figma</p>
+                            <p>Git, Figma, Canva</p>
                         </div>
                     </div>
                 </div>
@@ -90,6 +90,9 @@
                 <div class="about-section">
                     <h2>Contact</h2>
                     <p>Find my contact information on the <a href="contact.html" class="section-link">contact page<span class="arrow">↗</span></a>.</p>
+                </div>
+                <div class="about-section">
+                    <p>Since you've scrolled this far, you might as well check out my <a href="photography.html" class="section-link">photography page<span class="arrow">↗</span></a> too :D</p>
                 </div>
             </section>
         </main>
