--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -24,10 +24,13 @@
         </nav>
         <main>
             <section id="contact">
-                <p>Email: <a href="mailto:6iubiu@gmail.com">ajlu0414@gmail.com</a></p>
-                <p>LinkedIn: <a href="https://www.linkedin.com/in/steven-lu-04b603300/">Steven Lu</a></p>
-                <p>GitHub: <a href="https://github.com/biu6iu">biu6iu</a></p>
-                <p>Instagram: <a href="https://www.instagram.com/6iubiu/">@6iubiu</a></p>
+                <div class="about-section">
+                    <h2>CONTACT INFO</h2>
+                    <p>Email: <a href="mailto:6iubiu@gmail.com">ajlu0414@gmail.com</a></p>
+                    <p>LinkedIn: <a href="https://www.linkedin.com/in/steven-lu-04b603300/">Steven Lu</a></p>
+                    <p>GitHub: <a href="https://github.com/biu6iu">biu6iu</a></p>
+                    <p>Instagram: <a href="https://www.instagram.com/6iubiu/">@6iubiu</a></p>
+                </div>
             </section>
         </main>
     </div>
