--- a/src/pages/projects.html
+++ b/src/pages/projects.html
@@ -24,8 +24,10 @@
         </nav>
         <main>
             <section id="projects">
-                <p>This section is for other content and projects.</p>
-                <p>Will update soon...</p>
+                <div class="about-section">
+                    <h2>PROJECTS</h2>
+                      <p>Will update soon...</p>
+                </div>
             </section>
         </main>
     </div>
