--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -92,7 +92,7 @@
                     <p>Find my contact information on the <a href="contact.html" class="section-link">contact page<span class="arrow">↗</span></a>.</p>
                 </div>
                 <div class="about-section">
-                    <p>Since you've scrolled this far, you might as well check out my <a href="photography.html" class="section-link">photography page<span class="arrow">↗</span></a> too :D</p>
+                    <p>Since you've scrolled this far, you might as well check out the <a href="photography.html" class="section-link">photography page<span class="arrow">↗</span></a> too :D</p>
                 </div>
             </section>
         </main>
