--- a/src/pages/photography.html
+++ b/src/pages/photography.html
@@ -24,6 +24,7 @@
         </nav>
         <main>
             <section id="collections">
+                <h1 class="collection-title">PHOTOGRAPHY COLLECTIONS</h1>
                 <a href="collections/sydney_collection.html">
                     <button>
                         <img src="/assets/photos/syd_24'/DSCF4607.JPG" alt="Sydney 2024">
